# Rawda

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml  render.free-test.yaml  render.yaml  requirements.txt
backups/: company-duplicate-repair-2026-06-08.json  postgres-data-before-mysql.json
docs/: image-optimization.md  implementation_plan.md  invoice_printing.md  mysql_database.md
scripts/: local_print_service.py  start-local-mariadb.ps1  start-local-postgres.ps1  stop-local-mariadb.ps1  stop-local-postgres.ps1
sql/: 001_schema.sql  002_seed.sql
src/: manage.py
src/apps/catalog/: admin.py  cart.py  checkout.py  forms.py  middleware.py  models.py  sorting.py  tests.py  urls.py  views.py
src/apps/core/: admin.py  context_processors.py  forms.py  localization.py  models.py  order_status.py  pricing.py  services.py  tests.py  urls.py  views.py
src/apps/dashboard/: forms.py  localization.py  mixins.py  tests.py  urls.py  views.py
src/apps/promotions/: admin.py  models.py
src/config/: urls.py
src/config/settings/: base.py  production.py
src/media/: __init__.py
src/media/utils/: __init__.py  image_optimizer.py
src/static/css/: 01-foundations-home.css  02-storefront-components.css  03-dashboard-forms.css  04-responsive.css  05-cart-checkout.css  06-page-overrides.css  styles.css
src/static/js/: site.js
src/templates/dashboard/: base.html  center_status.html  customer_detail.html  customers.html  delivery_area_form.html  form_page.html  index.html  login.html  manage_categories.html  manage_delivery_areas.html  manage_products.html  (+5 more)
(+72 files in other folders)
